--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -1,6 +1,37 @@
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.shapeable-block{
+  display: inline-block;
+  background: white;
+
+  float: right;
+
+  color: #818181;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 20px;
+  text-align: center;
+
+  margin-left: 3px;
+
+  padding: 3px;
+
+  width: auto;
+  height: 16px;
+
+  border: 1px solid #DBDBDB;
+  border-radius: 5px;
+}
+.shapeable-block:hover{
+  color: white;
+
+  cursor: hand; //IE Support
+  cursor: pointer;
+
+  background: #19A3D1;
+}
+
 .new-block{
   display: inline-block;
   background: white;
