--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -15,7 +15,7 @@
 
   margin-left: 3px;
 
-  padding: 3px;
+  padding: 5px;
 
   width: auto;
   height: 16px;
@@ -31,6 +31,37 @@
 
   background: #19A3D1;
 }
+.shapeable-cblock{
+  display: inline-block;
+  background: white;
+
+  float: right;
+
+  color: #818181;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 20px;
+  text-align: center;
+
+  margin-left: 3px;
+
+  padding: 5px;
+
+  width: auto;
+  height: 16px;
+
+  border: 1px solid #DBDBDB;
+  border-radius: 5px;
+}
+.shapeable-cblock:hover{
+  color: white;
+
+  cursor: hand; //IE Support
+  cursor: pointer;
+
+  background: #FF1919;
+}
+
 
 .new-block{
   display: inline-block;
