--- a/app/assets/stylesheets/flash.scss
+++ b/app/assets/stylesheets/flash.scss
@@ -3,8 +3,10 @@
   border-radius: 5px;
   background: #D1FFD1;
 
+  padding: 3px;
+
   width: 80%;
-  height: 3%;
+  height: 16px;
   display: block;
   position: fixed;
   top: 7.5%;
@@ -13,7 +15,7 @@
 
   text-align: center;
   color: #546654;
-  font-size: 1.3em;
+  font-size: 16px;
 
   z-index: 200;
 }
@@ -23,8 +25,10 @@
   border-radius: 5px;
   background: #FF7373;
 
+  padding: 3px;
+
   width: 80%;
-  height: 3%;
+  height: 16px;
   display: block;
   position: fixed;
   top: 7.5%;
@@ -33,7 +37,7 @@
 
   text-align: center;
   color: white;
-  font-size: 1.3em;
+  font-size: 16px;
 
   z-index: 200;
 }
