Adding teams to season through ajax
- teams can only belong to one season currently

--- a/app/views/seasons/index.html.erb
+++ b/app/views/seasons/index.html.erb
@@ -56,7 +56,7 @@
             <% if !current_season.nil? %>
               <% @teams.each do |t| %>
                 <% if !current_season.teams.include?(t) #is not already in the season%>
-                  <%= form_for [@current_account, t] do |f| %>
+                  <%= form_for [@current_account, t], remote: true do |f| %>
                     <%= f.hidden_field :season_id, value: current_season.id %>
                     <%= f.submit t.name, class: "team-button", title: "Add to season" %>
                   <% end %>
