Added viewable teams
- need to work on removing team from season + editing records

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -135,7 +135,7 @@
   text-align: center;
   padding: 5px;
 
-  border: 1px solid #DBDBDB;
+  border: none;
   border-radius: 5px;
 }
 .team-button:hover{
