--- a/app/views/seasons/index.html.erb
+++ b/app/views/seasons/index.html.erb
@@ -47,6 +47,7 @@
             <% end %>
           </div>
           <div class="shapeable-block" id="new-team" style="display:none;">+TEAM</div>
+          <%= link_to "CALENDAR", calendar_path, class: "shapeable-block" %>
         </div>
         <div id="season-info">
         </div>
@@ -65,10 +66,7 @@
             <% end %>
           </div>
         </div>
-      </div>
-      <div id="team-main">
-        <div id="team-select">
-        </div>
+      </div><div id="team-main">
         <div id="team-info">
         </div>
       </div>
