--- a/app/assets/stylesheets/seasons.scss
+++ b/app/assets/stylesheets/seasons.scss
@@ -34,6 +34,11 @@
   padding: 5px;
 }
 
+#static-venueslist{
+  display: none;
+  padding: 5px;
+}
+
 #team-main{
   display: inline-block;
   vertical-align: top;
