--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -122,7 +122,7 @@
   background: #FF1919;
 }
 
-.team-button{
+.info-button{
   display: inline-block;
   background: white;
 
@@ -137,7 +137,7 @@
   border: none;
   border-radius: 5px;
 }
-.team-button:hover{
+.info-button:hover{
   color: white;
 
   cursor: hand; //IE Support
