--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -167,3 +167,20 @@
 
   background: #19A3D1;
 }
+
+.button{
+  background: white;
+
+  color: #818181;
+  font-size: 24px;
+  border: 1px solid #DBDBDB;
+  border-radius: 5px;
+}
+.button:hover{
+  color: white;
+
+  cursor: hand; //IE Support
+  cursor: pointer;
+
+  background: #19A3D1;
+}
