--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -56,6 +56,14 @@
   font-size: 16px;
 }
 
+#text-area{
+  border-style: none;
+  border-width: thin;
+  width: 90%;
+  font-size: 20px;
+  padding: 0;
+}
+
 .large-selector{
   font-size: 20px;
   border: none;
